[package]
name = "erc2771"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-sol-types = { version = "0.6.0", features = ["eip712-serde"] }
alloy-primitives = { version = "0.6.0", features = ["serde"] }
