[package]
name = "erc2771"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-sol-types = { version = "0.6.2", features = ["eip712-serde"] }
alloy-primitives = { version = "0.6.2", features = ["serde"] }

clap = { version = "4.0", features = ["derive"] }
ethers = { version = "2.0", features = ["rustls", "legacy"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.64"

[[bin]]
name = "eip712-example"
path = "src/eip712_example.rs"
